3er Commit de la Clase

--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,14 @@ li {
 
 .navbar {
   width: 70%;
+  text-align: center;
+  color: #025157;
+  font-weight: 500;
 }
 
 .actions {
   width: 15%;
+  text-align: right;
+  font-size: 14px;
+  font-weight: 600;
 }
